--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "moralis": "^2.14.3",
     "next": "13.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-moralis": "^1.4.2",
+    "typescript": "4.9.5",
+    "web3uikit": "^1.0.4"
   }
 }
