--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rebass/preset": "^4.0.5",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "emotion-theming": "^11.0.0",
     "ethers": "^5.7.2",
     "moralis": "^2.14.3",
     "next": "13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-moralis": "^1.4.2",
+    "rebass": "^4.0.7",
     "typescript": "4.9.5",
     "web3uikit": "^1.0.4"
   }
