--- a/package.json
+++ b/package.json
@@ -9,19 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rebass/preset": "^4.0.5",
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "emotion-theming": "^11.0.0",
-    "ethers": "^5.7.2",
-    "moralis": "^2.14.3",
-    "next": "13.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-moralis": "^1.4.2",
-    "rebass": "^4.0.7",
-    "typescript": "4.9.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.11",
+    "next": "13.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "web3uikit": "^1.0.4"
   }
 }
